--- a/templates/sbnext-desktop/_layout.twig
+++ b/templates/sbnext-desktop/_layout.twig
@@ -76,7 +76,7 @@
 	</div>
 	<footer>
 		<div class="footer">
-			<img src="/assets/logo-wordmark{% if theme == 'dark' %}-dark{% endif %}.png">
+			<img src="/assets/logo-wordmark-masthead{% if theme == 'dark' %}-dark{% endif %}.png">
 			<p>Version {{ version }} · <b>{{ __("By the squareBracket contributors") }}</b> · 2020-{{ 'now' | date('Y') }} 
 			| <b><a href="/statistics.php">{{ __("Statistics") }}</a></b>
 			</p>
