--- a/templates/sbnext-mobile/index.twig
+++ b/templates/sbnext-mobile/index.twig
@@ -8,7 +8,7 @@
 <meta property="og:image" content="{{ domain }}assets/logo_square_icon.png">
 <meta property="og:url" content="{{ page_url }}">
 {% endblock %}
-{% block title %}Main page{% endblock %}
+{% block title %}Home{% endblock %}
 
 	{% block precontent %}
 {% if theme != 'nostalgia' %}
