--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -3,7 +3,7 @@
 /// Variables \\\
 @import "_variables";
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 /* SB CSS STARTS HERE ======================================================== */
 
@@ -11,11 +11,11 @@
 @import "_grid-breakpoints";
 
 h1, h2, h3 {
-	font-weight: 400;
+	font-weight: 500;
 }
 
 h4, h5, h6 {
-	font-weight: 300;
+	font-weight: 400;
 }
 
 .clearfix {
@@ -38,6 +38,7 @@ body {
   margin: auto;
   width: 100%;
   height: 100%;
+  font-weight: 500;
 }
 
 a:link,
@@ -176,39 +177,32 @@ menu, ol, ul, il {
   float: right;
 }
 
-.flex-left {
-	align-items: left;
-	justify-content: left;
-}
-
-.flex-center {
-	align-items: center;
-	justify-content: center;
-}
-
-.flex-right {
-	align-items: right;
-	justify-content: right;
-}
-
 .clear_right {
   clear: right;
 }
 
 .main-content {
- background-image: url("/assets/rain.jpg");
- background-size:cover;
+ background: rgb(62,62,62);
+ background: linear-gradient(90deg, rgba(62,62,62,1) 0%, rgba(107,107,107,1) 35%, rgba(155,155,155,1) 100%);
  margin:0;
  color:white;
- text-shadow: black 1px 1px 5px;
- padding: 25px 0;
  margin-top: -48px;
- padding: 75px 0px 25px;
- display: block;
-}
-
-.main-content .button {
-  text-shadow: none;
+ padding: 75px 0px 20px;
+ display: inline-block;
+ width: 100%;
+	.page-container {
+		h1, h2, h3, h4, h5, h6, p {
+			padding: 0;
+			margin: 8px 0;
+		}
+		h1 {
+			font-weight:600;
+			font-size: 2.5em;
+		}
+		.stats {
+			font-size: 1.5em;
+		}
+	}
 }
 
 .badge {
@@ -308,6 +302,13 @@ width: 100%;
 margin-bottom: 0.5em;
 font-size: 1.05em;
 padding: 0.25em;
+}
+
+.search-form {
+margin-bottom: 0.5em;
+font-size: 1.05em;
+padding: 0.25em;
+height: 100%;
 }
 
 .bi {
@@ -426,22 +427,21 @@ box-sizing: border-box;
 		height: 30px;
 		border: 0;
 	}
-	.guide-button {
+	.masthead-button {
 		margin-top: 2px;
 		width: 32px;
 		height: 32px;
-		float: left;
 		text-align: center;
 		vertical-align: middle;
+	}
+	.guide-button {
+		float: left;
 	}
 }
 
 #masthead-search {
-    position: relative;
-    padding: 0;
-    margin-top: 3px;
     overflow: hidden;
-    *zoom: 1;
+	padding: 5px 4px;
 		label {
 		height: 100%;
 		line-height: 30px;
@@ -710,6 +710,7 @@ line-height: 17px;
   overflow: hidden;
   background: #ffffff;
   right: 0px;
+  text-align: left;
   ul {
 	  li {
 		padding: 4px 0;
