--- a/templates/sbnext-desktop/index.twig
+++ b/templates/sbnext-desktop/index.twig
@@ -8,7 +8,7 @@
 <meta property="og:image" content="{{ domain }}assets/logo_square_icon.png">
 <meta property="og:url" content="{{ page_url }}">
 {% endblock %}
-{% block title %}Main page{% endblock %}
+{% block title %}Home{% endblock %}
 
 	{% block precontent %}
 {% if theme != 'nostalgia' %}
@@ -16,12 +16,12 @@
 <div class="main-content">
 	<div class="container page-container">
 		{% if log %}
-		<div class="grid" style="height:inherit;display: table;">
-			<div style="display: table-cell;vertical-align: middle;width:16%;padding-right:1em;">
-				<img class="rounded img-fluid" src="{{ profile_image(userdata.name) }}" alt="{{ userdata.name }}">
+			<div class="col-md-8">
+				<h1>{{ __("Welcome to squareBracket") }}</h1>
+				<h3>@{{ userdata.name }}</h3>
+				<a class="button button-neutral button-large" href="../studio/">{{ __("Manage") }} {{ icon('caret-right-fill', 12) }}</a>
 			</div>
-			<div style="display: table-cell;vertical-align: middle;">
-				<h1 style="padding:0;margin:8px 0;font-weight:400;">{{ __("Welcome to squareBracket,") }} {{ userdata.title }}</h1>
+			<div class="col-md-4 right stats">
 				{# hack to prevent twig from outputing the number 1 #}
 				{% if totalSubscribers != 1 %}
 					{% set pluralSubscribers = __("s") %}
@@ -29,23 +29,18 @@
 				{% if totalViews != 1 %}
 					{% set pluralViews = __("s") %}
 				{% endif %}
-				<h3 style="padding:0;margin:8px 0;">@{{ userdata.name }}</h3>
-				<p style="padding:0;margin:8px 0;">{{ __("%s follower%s", [totalSubscribers ?? __("no"), pluralSubscribers]) }}
-					&bull; {{ __("%s view%s", [totalViews ?? __("no"), pluralViews]) }}</p>
-				<a class="button button-neutral button-large" href="../studio/">{{ __("Manage") }} {{ icon('caret-right-fill', 12) }}</a>
+				<p>{{ __("%s follower%s", [totalSubscribers ?? __("no"), pluralSubscribers]) }}
+				<br>{{ __("%s view%s", [totalViews ?? __("no"), pluralViews]) }}</p>
 			</div>
-		</div>
 		{% else %}
-		<div class="grid">
 			<div class="col-md-8">
-				<h1 style="padding:0;margin:8px 0;">{{ __("Welcome to squareBracket") }}</h1>
+				<h1>{{ __("Welcome to squareBracket") }}</h1>
 				<h3 style="padding:0;margin:0;">{{ __("Unbelivable, This is not PokTube.") }}</h3>
 			</div>
 			<div class="col-md-4">
 				<a class="button button-neutral button-large" href="register.php">{{ __("Get started") }} {{ icon('caret-right-fill', 16) }}</a><br><br>
 				<big>{{ __("Already have an account?") }} <a class="button button-neutral" href="login.php">{{ __("Sign in") }}</a></big>
 			</div>
-		</div>
 		{% endif %}
 	</div>
 </div>
