[CodeFactor] Apply fixes

--- a/assets/scss/nostalgia.scss
+++ b/assets/scss/nostalgia.scss
@@ -18,7 +18,7 @@ a:link, a:visited, a:active {
 
 .header1 {
 	margin: 0px auto;
-	padding: 20px 0px 2px 0px;
+	padding: 20px 0px 2px;
 }
 
 .header2 {
