--- a/templates/sbnext-mobile/index.twig
+++ b/templates/sbnext-mobile/index.twig
@@ -18,7 +18,7 @@
 		{% if log %}
 		<div class="grid" style="height:inherit;display: table;">
 			<div style="display: table-cell;vertical-align: middle;width:90%;padding-right:1em;">
-				<h1 style="padding:0;margin:8px 0;font-weight:400;">{{ __("Welcome to squareBracket,") }} {{ userdata.title }}</h1>
+				<h1 style="padding:0;margin:8px 0;font-weight:400;">{{ __("Welcome to squareBracket") }}</h1>
 				{# hack to prevent twig from outputing the number 1 #}
 				{% if totalSubscribers != 1 %}
 					{% set pluralSubscribers = __("s") %}
