--- a/templates/sbnext-common/components/videobox.twig
+++ b/templates/sbnext-common/components/videobox.twig
@@ -1,4 +1,4 @@
-<div class="card" style="margin-bottom:4px;height:440px;">
+<div class="card" style="margin-bottom:4px">
 	<div class="card-body">
 		<div class="grid">
 				<div class="col-md-12">
