--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -7,6 +7,10 @@
 
 /* SB CSS STARTS HERE ======================================================== */
 
+html {
+    height: 100%;
+}
+
 @import "_clearfix";
 @import "_grid-breakpoints";
 
@@ -269,18 +273,34 @@ input[type="color"]:focus,
     0 0 8px rgba(82, 168, 236, 0.6);
 }
 
-.form-signin {
-  max-width: 250px;
-  padding: 19px 29px 29px;
-  margin: 0 auto 20px;
-  background-color: #fff;
-  border: 1px solid #e5e5e5;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
-  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
-  -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+.chaziz-body {
+	background: url(/assets/chazizgrkb/background.png);
+	background-size: cover;
+    display: flex;
+    align-items: center;
+}
+
+.chazizPage {
+	.form-signin {
+		max-width: 250px;
+		padding: 19px 29px 29px;
+		margin: 0 auto 20px;
+		background-color: #fff;
+		border: 1px solid #e5e5e5;
+		-webkit-border-radius: 5px;
+		-moz-border-radius: 5px;
+		border-radius: 5px;
+		-webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+		-moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+		box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+	}
+	.chazizgrkb {
+		width: 250px;
+		margin: 25px 0px;
+		margin-left: auto;
+		margin-right: auto;
+		display: block;
+	}
 }
 
 .form-signin input[type="text"],
