--- a/templates/sbnext-common/login.twig
+++ b/templates/sbnext-common/login.twig
@@ -1,4 +1,4 @@
-{% extends "_layout.twig" %}
+{% extends "_layout_chaziz.twig" %}
 
 {% block title %}{{ __("Sign in") }}{% endblock %}
 
@@ -13,12 +13,13 @@
 	<div class="header_message header-success" role="alert">{{ __("You have been successfully logged out of all devices.") }}</div>
 {% endif %}
 
+<div class="grid chazizPage">
+<img class="chazizgrkb" src="/assets/chazizgrkb/logo_account.png">
 <form method="post" name="loginForm" id="loginForm" action="login.php" class="form-signin">
-	<h2 class="form-signin-heading">{{ __("Sign in") }}</h2>
-
 	<input type="text" name="username" class="input-block-level" placeholder="{{ __("Username") }}">
 	<input type="password" name="password" class="input-block-level" placeholder="{{ __("Password") }}">
 	<br>
 	<input class="button button-large button-primary" type="submit" value="{{ __("Sign in") }}" name="loginsubmit">
 </form>
+</div>
 	{% endblock %}
