maintenance error isn't a lame PHP error anymore
so now the maintenance error is using finalium stuff

--- a/templates/sbnext-desktop/_layout.twig
+++ b/templates/sbnext-desktop/_layout.twig
@@ -81,10 +81,12 @@
 			| <b><a href="/statistics.php">{{ __("Statistics") }}</a></b>
 			</p>
 			<h5>{{ __("Running on commit: ") }} <a href="https://github.com/chazizgrkb/squarebracket/commit/{{ git_commit() }}">{{ git_commit() }}</a><br></h5>
+			{% if isMaintenance != true %}
 			<a class="button button-neutral button-small btnAdd" role="button">{{ __("Options") }}</a>
 			<div id="myModal" class="bg-neutral" style="padding:0.3em;">
 
 			</div>
+			{% endif %}
 		</div>
 	</footer>
 {% block custom_footer %}
