change name of comedy category

--- a/templates/sbnext-desktop/browse.twig
+++ b/templates/sbnext-desktop/browse.twig
@@ -12,7 +12,7 @@
 				<li {% if type=='all' %}class="active" {% endif %}><a href="browse.php?type=all">{{ __("All") }}</a></li>
 				<li {% if type=='misc' %}class="active" {% endif %}><a href="browse.php?type=misc">{{ __("Miscellanous") }}</a></li>
 				<li {% if type=='entertainment' %}class="active" {% endif %}><a href="browse.php?type=entertainment">{{ __("Entertainment") }}</a></li>
-				<li {% if type=='comedy' %}class="active" {% endif %}><a href="browse.php?type=comedy">{{ __("Shitposting & Comedy") }}</a></li>
+				<li {% if type=='comedy' %}class="active" {% endif %}><a href="browse.php?type=comedy">{{ __("Comedy & Humor") }}</a></li>
 				<li {% if type=='gaming' %}class="active" {% endif %}><a href="browse.php?type=gaming">{{ __("Gaming") }}</a></li>
 				<li {% if type=='news' %}class="active" {% endif %}><a href="browse.php?type=news">{{ __("News and Updates") }}</a></li>
 				<li {% if type=='life' %}class="active" {% endif %}><a href="browse.php?type=life">{{ __("Lifestyle") }}</a></li>
