fix maintenance mode for mobile

--- a/templates/sbnext-mobile/components/_header.twig
+++ b/templates/sbnext-mobile/components/_header.twig
@@ -2,6 +2,7 @@
 		<div id="masthead">
 			<div class="grid" style="gap:0px;margin-bottom: 17.5px;">
 				<div class="col-md-8">
+				{% if isMaintenance != true %}
 					<form id="masthead-search" style="display:none" action="/search.php">
 						<button id="search-btn" class="button button-secondary">
 							<span>{{ icon("search", 16) }}</span>
@@ -10,11 +11,15 @@
 							<label><input type="text" name="query" placeholder="{{ __("Search...") }}"></label>
 						</div>
 					</form>
+				{% endif %}
 					<div id="header-main">
+					{% if isMaintenance != true %}
 						<div class="button button-neutral-invis guide-button" id="guide-toggle">{{ icon("list", 20) }}</div>
+					{% endif %}
 						<a href="/" id="logo-container"><img id="logo" src="/assets/logo-wordmark-masthead{% if theme == 'dark' %}-dark{% endif %}.png"></a>
 					</div>
 				</div>
+				{% if isMaintenance != true %}
 				<div class="col-md-4" style="text-align: right;">
 					<button id="showSearch" onclick="showSearch()" class="button button-secondary-invis" style="margin-right: 0.5rem;">
 						<span>{{ icon("search", 20) }}</span>
@@ -40,6 +45,7 @@
 						{% endif %}
 					</div>
 				</div>
+				{% endif %}
 			</div>
 		</div>
 	</div>
