--- a/assets/scss/_images.scss
+++ b/assets/scss/_images.scss
@@ -1,4 +1,4 @@
-// loosely based on bootstrap 5.1.3's img-fluid thingabit
+// loosely based on bootstrap 5.1.3's img-fluid thing
 
 .img-fluid {
   width: 100%;
@@ -13,7 +13,7 @@
 	max-width: 100px;
 	height: 100px;
 	width: 100px;
-	top: 0;
+	top: 20px;
 	left: 20px;
 	position: relative;
 	box-shadow: 0 1px 8px rgba(0,0,0,.4);
