--- a/templates/sbnext-desktop/user.twig
+++ b/templates/sbnext-desktop/user.twig
@@ -1,220 +1,86 @@
 {% extends "_layout.twig" %}
-{% block title %}{{ userpagedata.title }}{% endblock %}
+{% block title %}{{ name }}{% endblock %}
 {% block head %}
-<meta name="title" content="{{ userpagedata.title }} - squareBracket">
-<meta name="description" content="{{ userpagedata.about|length > 250 ? userpagedata.about|slice(0, 250) ~ '...' : userpagedata.about }}">
-<meta name="theme-color" content="{{ userpagedata.customcolor }}">
-<meta property="og:site_name" content="squareBracket"/>
-<meta property="og:title" content="{{ userpagedata.title }} - squareBracket">
-<meta property="og:description" content="{{ userpagedata.about|length > 250 ? userpagedata.about|slice(0, 250) ~ '...' : userpagedata.about }}">
-<meta property="og:image" content="{{ domain }}/assets/profpic/{{ userpagedata.name }}.png">
-<meta property="og:url" content="{{ page_url }}">
 <script>
-   user_id = '{{ userpagedata.id }}';
+	user_id = '{{ userpagedata.id }}';
 </script>
 <link href="https://unpkg.com/plyr@3.6.8/dist/plyr.css" rel="stylesheet">
 {% endblock %}
-{% block customcss %}
-.channel-header-bg {
-	background: url('/assets/backgrounds/{{ userpagedata.name }}.png'), linear-gradient(#888, #444) !important;
-	background-position: center !important;
-	height: 225px;
-}
-body {
-	background-color: {{ customProfile.background }};
-}
-.user-action {
-	color: {{ customProfile.fontcolor }}
-}
-.tab button.active {
-	border-bottom-color: {{customProfile.regularheader }};
-}
-{% endblock %}
 {% block content %}
+<style>
+	.channel-header-bg {
+	background: url('/assets/backgrounds/{{ userpagedata.name }}.png'), linear-gradient(#888, #444);
+	background-position: center;
+	height: 225px;
+	}
+</style>
+<div class="channel-header-bg">
+	<div class="grid">
+		<div class="col-md-12">
+			<img class="rounded img-pfp-profiles" src="{{ profile_image(userpagedata.name) }}"  alt="{{ userpagedata.name }}">
+		</div>
+	</div>
+</div>
+<div class="bg-light" style="padding: 15px 10px;">
+<h1 style="margin: 0">{{ userpagedata.title }}{% if userpagedata.powerlevel > 1 %}<img class="sdsd" src="assets/icons/shield.svg" height="16" title="User is a moderator.">{% endif %}</h1>
+<div class="grid">
+	<div class="col-md-4">
+		<p>@{{ userpagedata.name }}
+			&bull; {{ __("%s follower%s", [subCount ?? __("no"), pluralSubscribers]) }}
+			&bull; {{ __("%s view%s", [totalViews ?? __("Not implemented"), pluralViews]) }}
+		</p>
+	</div>
+	<div class="col-md-offset-12 col-md-4 right">
+	{% if userpagedata.id == userdata.id %}
+		<a class="button button-primary" href="settings.php">{{ __("Edit profile") }}</a>
+	{% else %}
+		<button id="subscribe" class="button button-{% if subscribed %}secondary{% else %}primary{% endif %}" type="button" {% if not log %}disabled{% endif %}>{% if subscribed %}{{ __("Unfollow") }}{% else %}{{ __("Follow") }}{% endif %}</button>
+	{% endif %}
+	</div>
+</div>
 {% if markread %}
-<div class="header_message header-success>{{ __("Marked all notifications as read.") }}</div>
+<div class="header_message">{{ __("Marked all notifications as read.") }}</div>
 {% elseif edited %}
-<div class="header_message header-success">{{ __("Settings successfully saved!") }}</div>
-{% else %}
-<div class="header_message header-warning">This profile design will be discontinued soon.</div>
+<div class="header_message">{{ __("Settings successfully saved!") }}</div>
 {% endif %}
-<div class="channel-header-bg"></div>
-<div class="grid" style="background-color:{{ customProfile.highlightheader }};height: 100px;">
-   <div class="col-md-1" style="height:inherit;display: table;">
-      <div style="display: table-cell;vertical-align: middle;">
-         <img class="img-fluid rounded" src="{{ profile_image(userpagedata.name) }}" title="{{ userpagedata.name }}" alt="{{ userpagedata.name }}">
-      </div>
-   </div>
-   <div class="col-md-9" style="color:{{ customProfile.titlefont }};height:inherit;">
-      <h1>{{ userpagedata.title }}</h1>
-      {# hack to prevent twig from outputing the number 1 #}
-      {% if subCount != 1 %}
-      {% set pluralSubscribers = __("s") %}
-      {% endif %}
-      {% if views != 1 %}
-      {% set pluralViews = __("s") %}
-      {% endif %}
-      <p>{{ __("%s follower%s", [subCount ?? __("no"), pluralSubscribers]) }}  • {{ __("%s view%s", [views ?? __("no"), pluralViews]) }}</p>
-   </div>
-   <div class="col-md-2 text-right" style="height:inherit;display: table;">
-      <div style="display: table-cell;vertical-align: middle;text-align:right;">
-         {% if userpagedata.id != userdata.id %}
-         <button id="subscribe-watch" class="button button-{% if subscribed %}secondary{% else %}primary{% endif %} button-small" type="button" {% if not log %}disabled{% endif %}>{% if subscribed %}{{ __("Unfollow") }}{% else %}{{ __("Follow") }}{% endif %}</button>
-         {% endif %}
-      </div>
-   </div>
+{% if userdata.id == id and not forceuser %}
+<p>{{ __("Welcome to your personal user page. Here, you can see and manage your uploaded content, customize your profile, and edit your settings.") }}</p>
+<p><a href="settings.php">{{ __("Edit my settings") }}</a>
+	&bull; <a href="user.php?id={{ id }}&forceuser">{{ __("View user page as viewer") }}</a>
+</p>
+{% if userdata.powerlevel > 2 %}
+<p><a href="admin.php">{{ __("Admin panel") }}</a></p>
+{% endif %}
+{% else %}
+<h2></h2>
+<div class="user_about">
+	<h3>{{ __("About this user") }}</h3>
+	{{ userpagedata.about | markdown }}
+	<b>{{ __("Registered on") }}</b>: {{ userpagedata.joined | date('Y-m-d H:i:s') }}
+	<br><br>
+	<b>{{ __("Last view") }}</b>: {{ userpagedata.lastview | relative_time }}
 </div>
-<div class="tab">
-   <button class="tablinks active" onclick="openTab(event, 'Home')" id="defaultOpen">{{ __("Home") }}</button>
-   <button class="tablinks" onclick="openTab(event, 'Videos')">{{ __("Videos") }}</button>
-   <button class="tablinks" onclick="openTab(event, 'About')">{{ __("About") }}</button>
-   <button class="tablinks" onclick="openTab(event, 'Chat')">{{ __("Discussion") }}</button>
-</div>
-<div id="Home" class="tabcontent" style="display: block;">
-   <div class="grid" style="background-color:{{ customProfile.highlightinside }};border: 1px solid {{ customProfile.highlightheader }}">
-      <div class="screwPaddingLeft col-md-9" style="color:{{ customProfile.fontcolor }};">
-         {% if video != false %}
-         <div class="card-profiles">
-            <h3 style="text-align:center;color:{{ customProfile.titlefont }};background-color:{{customProfile.regularheader }};margin:0;padding:5px;">
-               {{ __("Most recent video") }}
-            </h3>
-            <div class="card" style="border-color: {{customProfile.regularheader }};background-color:{{customProfile.regularinside }};">
-               <div class="card-body">
-                  <div class="col-md-6">
-                     {{ include('/components/player.twig') }}
-                  </div>
-                  <div class="col-md-6">
-                     <h2><a href="watch.php?v={{ video.video_id }}">{{ video.title }}</a></h2>
-                     <p style="margin:0;">{{ __("From:") }} <a href="/user.php?name={{ video.u_name }}" title="{{ video.u_name }}">{{ video.u_name }}</a></p>
-                  </div>
-                  <div class="clearfix"></div>
-               </div>
-            </div>
-         </div>
-         {% endif %}
-         <div class="card-profiles">
-            <h3 style="text-align:center;color:{{ customProfile.titlefont }};background-color:{{customProfile.regularheader }};margin:0;padding:5px;">
-               {{ __("All videos by %s", [userpagedata.title]) }}
-            </h3>
-            <div class="card" style="border-color: {{customProfile.regularheader }};background-color:{{customProfile.regularinside }};">
-               <div class="card-body">
-                  {% for latestVideo in latestVideos %}
-                  {{ vertical_video_box(latestVideo) }}
-                  {% else %}
-                  <p>{{ __("There are currently no videos uploaded by %s.", [userpagedata.title]) }}</p>
-                  {% endfor %}
-               </div>
-            </div>
-         </div>
-      </div>
-      <div class="screwPaddingRight col-md-3" style="color:{{ customProfile.fontcolor }};">
-         <div class="card-profiles">
-            <h3 style="text-align:center;color:{{ customProfile.titlefont }};background-color:{{customProfile.regularheader }};margin:0;padding:5px;">
-               {{ userpagedata.name }}
-            </h3>
-            <div class="card" style="border-color: {{customProfile.regularheader }};background-color:{{customProfile.regularinside }};">
-               {% if userpagedata.id == userdata.id and not forceuser %}
-               <div class="user-action-container">
-                  <a href="settings.php">
-                     <div class="user-action">{{ icon("gear", 20) }} {{ __("Configure settings") }}</div>
-                  </a>
-               </div>
-               <div class="user-action-container">
-                  <a href="/user.php?id={{ id }}&forceuser">
-                     <div class="user-action">{{ icon("person", 20) }} {{ __("View as viewer") }}</div>
-                  </a>
-               </div>
-               {% else %}
-               {% if log %}
-               {% if userdata.powerlevel > 2 %}
-               <div class="user-action-container">
-                  <a href="resetpassword.php?grf={{ id }}">
-                     <div class="user-action">{{ icon("key", 20) }} {{ __("Generate password reset") }}</div>
-                  </a>
-               </div>
-               {% endif %}
-               {% endif %}
-               {% endif %}
-            </div>
-         </div>
-      </div>
-   </div>
-</div>
-<div id="Videos" class="tabcontent">
-   <div class="grid" style="background-color:{{ customProfile.highlightinside }};border: 1px solid {{ customProfile.highlightheader }}">
-      Videos
-   </div>
-</div>
-<div id="About" class="tabcontent">
-   <div class="grid" style="background-color:{{ customProfile.highlightinside }};border: 1px solid {{ customProfile.highlightheader }}">
-      <div class="col-md-9 screwPaddingLeft">
-         <div class="card-profiles">
-            <h3 style="text-align:center;color:{{ customProfile.titlefont }};background-color:{{customProfile.regularheader }};margin:0;padding:5px;">{{ __("Description") }}</h3>
-            <div class="card" style="border-color: {{customProfile.regularheader }};background-color:{{customProfile.regularinside }};">
-               <div class="card-body">
-                  {% if userpagedata.about %}
-                  {{ userpagedata.about | markdown }}
-                  {% else %}
-                  {{ __("%s has not set their description.", [userpagedata.title]) }}
-                  {% endif %}
-               </div>
-            </div>
-         </div>
-      </div>
-      <div class="col-md-3 screwPaddingRight">
-         <div class="card-profiles">
-            <h3 style="text-align:center;color:{{ customProfile.titlefont }};background-color:{{customProfile.regularheader }};margin:0;padding:5px;">{{ __("Statistics") }}</h3>
-            <div class="card" style="border-color: {{customProfile.regularheader }};background-color:{{customProfile.regularinside }};">
-               <div class="card-body">
-                  <table style="width:100%">
-                     <thead>
-                        <tr>
-                           <td class="left">{{ __("Last visit") }}</td>
-                           <td class="right">{{ userpagedata.lastview | relative_time }}</td>
-                        </tr>
-                        <tr>
-                           <td class="left">{{ __("Registered") }}</td>
-                           <td class="right">{{ userpagedata.joined | relative_time }}</td>
-                        </tr>
-                     </thead>
-                  </table>
-               </div>
-            </div>
-         </div>
-      </div>
-   </div>
-</div>
-<div id="Chat" class="tabcontent">
-   <div class="grid" style="background-color:{{ customProfile.highlightinside }};border: 1px solid {{ customProfile.highlightheader }}">
-      <div class="card-profiles">
-         <h3 style="text-align:center;color:{{ customProfile.titlefont }};background-color:{{customProfile.regularheader }};margin:0;padding:5px;">
-            {{ __("Comments") }}
-         </h3>
-         <div class="card" style="border-color: {{customProfile.regularheader }};background-color:{{customProfile.regularinside }};">
-            {% if log %}
-            <div class="grid" id="commentField">
-               <div class="col-md-1">
-                  <img class="rounded img-fluid" src="{{ profile_image(userdata.name) }}">
-               </div>
-               <div class="col-md-11">
-                  <div>
-                     <textarea class="form-control" id="commentContents" style="overflow:hidden;resize:none" rows="3"
-                     placeholder="{{ __("Enter comment here.") }}"></textarea>
-                  </div>
-                  <div class="right">
-                     <button id="post-user" class="button button-primary" style="margin-bottom:0;">{{ __("Comment") }}</button>
-                  </div>
-               </div>
-            </div>
-            {% endif %}
-            <div id="comment"></div>
-            {% for comment in comments %}
-            {{ comment(comment) }}
-            {% endfor %}
-         </div>
-      </div>
-   </div>
-</div>
-</div>
-</div>
+<p class="clear_right">
+	<a href="forum/forum.php?user={{ id }}">{{ __("View threads") }}</a>
+	&bull; <a href="forum/thread.php?user={{ id }}">{{ __("Show posts") }}</a>
+	{% if log %}
+	{% if userdata.powerlevel > 2 %}
+	&bull; <a href="resetpassword.php?grf={{ id }}">{{ __("Generate password reset for user") }}</a>
+	&bull; <a href="forum/editperms.php?uid={{ id }}">{{ __("Edit forum permissions") }}</a>
+	{% endif %}
+	{% endif %}
+</p>
+{% for latestVideo in latestVideos %}
+{{ small_video_box(latestVideo) }}
+{% else %}
+<p>{{ __("There are currently no videos uploaded by %s.", [user.title]) }}</p>
+{% endfor %}
+{% if userdata.id == id %}
+{% set forceuser = "&forceuser" %}
+{% else %}
+{% set forceuser = "" %}
+{% endif %}
+{% set le_url = 'user.php?id=' ~ id ~ '&page=%s' ~ forceuser %}
+{{ pagination(level_count, glob_lpp, le_url, page) }}
+{% endif %}
 {% endblock %}
