--- a/templates/sbnext-desktop/user.twig
+++ b/templates/sbnext-desktop/user.twig
@@ -1,27 +1,49 @@
 {% extends "_layout.twig" %}
-{% block title %}{{ name }}{% endblock %}
+{% block title %}{{ userpagedata.title }}{% endblock %}
 {% block head %}
+<meta name="title" content="{{ userpagedata.title }} - cheeseRox">
+<meta name="description" content="{{ userpagedata.about|length > 250 ? userpagedata.about|slice(0, 250) ~ '...' : userpagedata.about }}">
+<meta name="theme-color" content="{{ userpagedata.customcolor }}">
+<meta property="og:site_name" content="cheeseRox"/>
+<meta property="og:title" content="{{ userpagedata.title }} - cheeseRox">
+<meta property="og:description" content="{{ userpagedata.about|length > 250 ? userpagedata.about|slice(0, 250) ~ '...' : userpagedata.about }}">
+<meta property="og:image" content="{{ domain }}/assets/profpic/{{ userpagedata.name }}.png">
+<meta property="og:url" content="{{ page_url }}">
 <script>
 	user_id = '{{ userpagedata.id }}';
 </script>
-<link href="https://unpkg.com/plyr@3.6.8/dist/plyr.css" rel="stylesheet">
 {% endblock %}
 {% block content %}
 <style>
-	.channel-header-bg {
-	background: url('/assets/backgrounds/{{ userpagedata.name }}.png'), linear-gradient(#888, #444);
-	background-position: center;
+.channel-header-bg {
+	background: url('/assets/backgrounds/{{ userpagedata.name }}.png'), linear-gradient(#888, #444) !important;
+	background-position: center !important;
 	height: 225px;
-	}
+	padding: 0;
+	margin-top: 0;
+}
 </style>
-<div class="channel-header-bg">
+{% if userpagedata.id == userdata.id and not forceuser %}
+<div class="bg-dark" style="padding:1px 15px;">
+<p>		   <a href="settings.php" style="color:white;">{{ __("Edit my settings") }}</a>
+	&bull; <a href="user.php?id={{ id }}&forceuser" style="color:white;">{{ __("View user page as viewer") }}</a>
+	{% if userpagedata.powerlevel > 2 %}
+	&bull; <a href="/admin/" style="color:white;">{{ __("Admin panel") }}</a></p>
+	{% endif %}
+</p>
+</div>
+<form action="login.php" method="post" name="logout">
+	<input type="hidden" name="logout" value="yes">
+</form>
+{% endif %}
+<div class="main-content channel-header-bg">
 	<div class="grid">
-		<div class="col-md-12">
+		<div class="col-md-4">
 			<img class="rounded img-pfp-profiles" src="{{ profile_image(userpagedata.name) }}"  alt="{{ userpagedata.name }}">
 		</div>
 	</div>
 </div>
-<div class="bg-light" style="padding: 15px 10px;">
+<div class="bg-neutral" style="padding: 15px 10px;">
 <h1 style="margin: 0">{{ userpagedata.title }}{% if userpagedata.powerlevel > 1 %}<img class="sdsd" src="assets/icons/shield.svg" height="16" title="User is a moderator.">{% endif %}</h1>
 <div class="grid">
 	<div class="col-md-8">
@@ -45,42 +67,56 @@
 	{% endif %}
 	</div>
 </div>
+			      <div class="tab">
+                     <button class="tablinks active" onclick="openTab(event, 'Home')" id="defaultOpen">Home</button>
+					 <button class="tablinks" onclick="openTab(event, 'Videos')">Videos</button>
+					 <button class="tablinks" onclick="openTab(event, 'Discussion')">Discussion</button>
+					 <button class="tablinks" onclick="openTab(event, 'About')">About</button>
+                  </div>
+<div id="Home" class="tabcontent" style="display: block;">
 {% if markread %}
 <div class="header_message">{{ __("Marked all notifications as read.") }}</div>
 {% elseif edited %}
 <div class="header_message">{{ __("Settings successfully saved!") }}</div>
 {% endif %}
 {% if userdata.id == id and not forceuser %}
-<p>{{ __("Welcome to your personal user page. Here, you can see and manage your uploaded content, customize your profile, and edit your settings.") }}</p>
-<p><a href="settings.php">{{ __("Edit my settings") }}</a>
-	&bull; <a href="user.php?id={{ id }}&forceuser">{{ __("View user page as viewer") }}</a>
-</p>
-{% if userdata.powerlevel > 2 %}
-<p><a href="admin.php">{{ __("Admin panel") }}</a></p>
+<h3>{{ __("Notifications") }}</h3>
+<ul>
+	{% for notif in notifs %}
+	<li>{{ notif | raw }}</li>
+	{% else %}
+	<li>{{ __("No new notifications!") }}</li>
+	{% endfor %}
+	{% if notifs %}
+	<br>
+	<li><a href="user.php?id={{ id }}&markread">{{ __("Mark all as read") }}</a></li>
+	{% endif %}
+</ul>
 {% endif %}
-{% else %}
 <h2></h2>
 <div class="user_about">
 	<h3>{{ __("About this user") }}</h3>
-	{{ userpagedata.about | markdown }}
-	<b>{{ __("Registered on") }}</b>: {{ userpagedata.joined | date('Y-m-d H:i:s') }}
-	<br><br>
-	<b>{{ __("Last view") }}</b>: {{ userpagedata.lastview | relative_time }}
+	{{ userpagedata.about | raw }}
 </div>
 <p class="clear_right">
 	<a href="forum/forum.php?user={{ id }}">{{ __("View threads") }}</a>
 	&bull; <a href="forum/thread.php?user={{ id }}">{{ __("Show posts") }}</a>
 	{% if log %}
+	{% if userdata.id != id %}
+	&bull; <a href="forum/sendprivate.php?uid={{ id }}">{{ __("Send private message") }}</a>
+	{% endif %}
 	{% if userdata.powerlevel > 2 %}
 	&bull; <a href="resetpassword.php?grf={{ id }}">{{ __("Generate password reset for user") }}</a>
 	&bull; <a href="forum/editperms.php?uid={{ id }}">{{ __("Edit forum permissions") }}</a>
 	{% endif %}
 	{% endif %}
 </p>
+</div>
+<div id="Videos" class="tabcontent">
 {% for latestVideo in latestVideos %}
 {{ small_video_box(latestVideo) }}
 {% else %}
-<p>{{ __("There are currently no videos uploaded by %s.", [user.title]) }}</p>
+<p>{{ __("There are currently no videos uploaded by %s.", [userpagedata.title]) }}</p>
 {% endfor %}
 {% if userdata.id == id %}
 {% set forceuser = "&forceuser" %}
@@ -89,5 +125,18 @@
 {% endif %}
 {% set le_url = 'user.php?id=' ~ id ~ '&page=%s' ~ forceuser %}
 {{ pagination(level_count, glob_lpp, le_url, page) }}
-{% endif %}
+</div>
+<div id="About" class="tabcontent">
+			<div class="card">
+				<div class="card-header">{{ __("General information") }}</div>
+				<div class="card-body">
+					<b>{{ __("Forum Threads") }}</b>: {{ userpagedata.threads }}
+					<span class="pad"><b>{{ __("Forum Posts") }}</b>: {{ userpagedata.posts }}</span>
+					<br><br>
+					<b>{{ __("Registered on") }}</b>: {{ userpagedata.joined | date('Y-m-d H:i:s') }}
+					<br><br>
+					<b>{{ __("Last view") }}</b>: {{ userpagedata.lastview | relative_time }}
+				</div>
+			</div>
+		</div>
 {% endblock %}
