--- a/templates/sbnext-desktop/index.twig
+++ b/templates/sbnext-desktop/index.twig
@@ -4,7 +4,7 @@
 <meta name="description" content="Unbelivable, This is not PokTube.">
 <meta property="og:site_name" content="squareBracket"/>
 <meta property="og:title" content="squareBracket">
-<meta property="og:description" content="Unbelivable, This is not PokTube.">
+<meta property="og:description" content="Again.">
 <meta property="og:image" content="{{ domain }}assets/logo_square_icon.png">
 <meta property="og:url" content="{{ page_url }}">
 {% endblock %}
@@ -35,7 +35,7 @@
 		{% else %}
 			<div class="col-md-8">
 				<h1>{{ __("Welcome to squareBracket") }}</h1>
-				<h3 style="padding:0;margin:0;">{{ __("Unbelivable, This is not PokTube.") }}</h3>
+				<h3 style="padding:0;margin:0;">{{ __("Again.") }}</h3>
 			</div>
 			<div class="col-md-4">
 				<a class="button button-neutral button-large" href="register.php">{{ __("Get started") }} {{ icon('caret-right-fill', 16) }}</a><br><br>
