--- a/templates/layout111-common/_layout.twig
+++ b/templates/layout111-common/_layout.twig
@@ -98,7 +98,7 @@
 	{% block content %}
 	{% endblock %}
 	<footer class="footer">
-	<h1 class="title">[add squareBracket logo]</h1>
+	<h1 class="title">[111]</h1>
 	<p>squareBracket Version {{ version }} · Instance running on Git commit: <a href="https://github.com/chazizgrkb/squarebracket/commit/{{ git_commit() }}">{{ git_commit() }}</a></p>
 	<p><b>By the squareBracket contributors</b> · 2020-{{ 'now' | date('Y') }} | <a href="/statistics.php">Statistics</a></p>
 	</footer>
