--- a/templates/layout111-common/index.twig
+++ b/templates/layout111-common/index.twig
@@ -4,7 +4,7 @@
   <section class="hero is-primary">
     <div class="hero-body">
       <p class="title">
-        Welcome to Project 111
+        Welcome to Project 111{% if log %}, {{userdata.title}}{% endif %}
       </p>
       <p class="subtitle">
         Welcome.
