--- a/templates/layout111-common/components/player.twig
+++ b/templates/layout111-common/components/player.twig
@@ -1,8 +1,7 @@
-         <div id="container" style="margin:0;">
-            <!--- todo: redo "video processed" message to use _error.twig -gr 7/22/2021 --->
+         <div class="has-ratio">
             {% if (video.flags b-and 2) %}
-            <div style="background-color:black;color:white;aspect-ratio: 16 / 9;width: 100%;">
-               {{ __("This video is being processed. Try again later.") }}
+            <div class="has-text-white">
+               This video should be processing. If you see this message for too long, then please contact an administrator.
             </div>
             {% else %}
 			<div data-shaka-player-container style="aspect-ratio: 16 / 9;width: 100%;background-color:black;" data-shaka-player-cast-receiver-id="BBED8D28">
@@ -11,66 +10,9 @@
 			</div>
             {% endif %}
          </div>
-         <script src="https://cdn.jsdelivr.net/npm/shaka-player@3.1.6/dist/shaka-player.compiled.min.js"></script>
-         <script src="https://cdn.jsdelivr.net/npm/shaka-player@3.1.6/dist/shaka-player.ui.min.js"></script>
-		 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/shaka-player@3.1.6/dist/controls.css">
-         <!-- indigo player (the player we used back in the milestone/alpha days) was starting to have a lot of techincal issues by the time of alpha 3.
-            videos would randomly glitch on indigo and sometimes it wouldn't even load the goddamn video (not a ffmpeg issue this time).
-            we at squarebracket have decided to use plyr instead of indigo. the aspect ratio is a bit wonky but that should be fixed soon
-            -gamerappa, July 31st 2021 -->
-         <style>
-			.shaka-language-button {
-				display: none !important;
-			}
-		 
-			//todo: port this
-            .plyr--video {
-            --plyr-color-main: #1b8ade;
-            --plyr-font-family: arial, helvetica, sans-serif;
-            --plyr-control-spacing: 10px;
-            }
-            .plyr--video .plyr__controls {
-            padding: 1px 3px !important;
-            background: var(--plyr-video-controls-background,linear-gradient(#292929,#0B0B0B));
-            }
-            .plyr__control svg {
-            fill: #656565;
-            }
-            .plyr__control svg:hover {
-            fill: #CDCDCD;
-            }
-            .plyr--video .plyr__control.plyr__tab-focus, .plyr--video .plyr__control:hover, .plyr--video .plyr__control[aria-expanded="true"] {
-            background: #FFFFFF11;
-            color: var(--plyr-video-control-color-hover,#fff);
-            }
-            .plyr__control--overlaid {
-            background: #fff;
-            }
-            .plyr__controls .plyr__controls__item:first-child {
-            margin-left: 0;
-            margin-right: auto;
-            padding: 6px 19px;
-            }
-			.plyr--full-ui input[type="range"]::-moz-range-progress {
-			  background: linear-gradient(#1d89dc,#1a78c1);
-			}
-			.plyr__tooltip {
-			background: var(--plyr-tooltip-background,hsla(0, 0%, 7.5%, 0.9));
-			color: var(--plyr-tooltip-color,#fff);
-			}
-			.plyr__tooltip::before {
-			border-top: var(--plyr-tooltip-arrow-size,4px) solid var(--plyr-tooltip-background,hsla(0, 0%, 7.5%, 0.9));
-			}
-			.plyr__menu__container {
-			background: var(--plyr-menu-background,hsla(0, 0%, 7.5%, 0.9));
-			}
-			.plyr__menu__container::after {
-			border-top: var(--plyr-menu-arrow-size,4px) solid hsla(0, 0%, 7.5%, 0.9);
-			}
-			.plyr__menu__container .plyr__control {
-			  color: var(--plyr-menu-color,#cbcbcb);
-			}
-         </style>
+         <script src="https://cdn.jsdelivr.net/npm/shaka-player@4.1.1/dist/shaka-player.compiled.min.js"></script>
+         <script src="https://cdn.jsdelivr.net/npm/shaka-player@4.1.1/dist/shaka-player.ui.min.js"></script>
+		 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/shaka-player@4.1.1/dist/controls.css">
          <script>
             {% if not (video.flags b-and 2) %}
 				const manifestUri =
