fix registers, readd emails

--- a/templates/sbnext-common/register.twig
+++ b/templates/sbnext-common/register.twig
@@ -12,6 +12,8 @@
 <form method="post" name="loginForm" id="loginForm" action="register.php" class="form-signin">
 	<h2 class="form-signin-heading">{{ __("Register") }}</h2>
 
+	<input type="text" name="email" class="input-block-level" placeholder="{{ __("Email") }}">
+
 	<input type="text" name="displayName" class="input-block-level" placeholder="{{ __("Display Name") }}">
 	<input type="text" name="username" class="input-block-level" placeholder="{{ __("Username") }}">
 
