--- a/templates/sbnext-common/stats.twig
+++ b/templates/sbnext-common/stats.twig
@@ -6,9 +6,7 @@
 	<div class="card">
 		<div class="card-body">
 		<div style="padding:5px;">
-		<h2>{{ __("About squareBracket") }}</h2>
-		<!--<p>Yes, they were originally in the footer but I moved them here since checking the number of everything when
-		a user loads something on squareBracket is dumb.</p>-->
+		<h2>{{ __("About this instance of squareBracket") }}</h2>
 		</div>
 		<div class="grid">
 			<div class="col-md-6"><div class="statbox">
