--- a/templates/layout111-common/watch.twig
+++ b/templates/layout111-common/watch.twig
@@ -54,7 +54,7 @@
             <article class="media">
                 <figure class="media-left px-0 ml-1 mr-3">
                     <p class="image is-64x64">
-                    <img src="{{ profile_image(comment.u_name) }}">
+                    <img class="is-rounded" src="{{ profile_image(comment.u_name) }}">
                     </p>
                 </figure>
                 <div class="media-content">
