--- a/assets/project111/scss/style.scss
+++ b/assets/project111/scss/style.scss
@@ -1,9 +1,9 @@
 @charset "utf-8";
 
-@import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;500;600;700;800;900&display=swap');
 
 $primary: #434cb5;
-$family-sans-serif: "Barlow", sans-serif;
+$family-sans-serif: "Inter", sans-serif;
 
 /// Load Bulma \\\
 @import "vendor/npm-asset/bulma/bulma.sass";
