port finalium settings as placeholder

--- a/templates/layout111-common/_layout.twig
+++ b/templates/layout111-common/_layout.twig
@@ -71,11 +71,11 @@
           <a class="navbar-item">
             Studio
           </a>
-          <a class="navbar-item">
+          <a class="navbar-item" href="/settings">
             Settings
           </a>
           <hr class="navbar-divider">
-          <a class="navbar-item">
+          <a class="navbar-item" href="/logout">
             Logout
           </a>
         </div>
@@ -87,7 +87,7 @@
 				<a class="button is-primary">
 					<strong>Register</strong>
 				</a>
-				<a class="button is-light">
+				<a class="button is-light" href="/login">
 					Login
 				</a>
 			</div>
